--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             <version>31.0.1-jre</version>
         </dependency>
         <dependency>
-            <groupId>io.github.openfeign</groupId>
+            <groupId>io.GitHub.openfeign</groupId>
             <artifactId>feign-jackson</artifactId>
             <version>11.8</version>
             <scope>compile</scope>
@@ -112,33 +112,11 @@
                     </ignoredDependencies>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.2.0</version>
-            </plugin>
-            <plugin>
-                <groupId>fr.jcgay.maven.plugins</groupId>
-                <artifactId>buildplan-maven-plugin</artifactId>
-                <version>1.5</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.2.0</version>
-            </plugin>
 
             <plugin>
                 <groupId>fr.jcgay.maven.plugins</groupId>
                 <artifactId>buildplan-maven-plugin</artifactId>
                 <version>1.5</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.2.0</version>
             </plugin>
 
             <plugin>
