--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,11 @@
                     </reportSet>
                 </reportSets>
             </plugin>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.5.3.0</version>
+            </plugin>
         </plugins>
 
     </reporting>
