--- a/pom.xml
+++ b/pom.xml
@@ -216,7 +216,11 @@
                 <artifactId>spotbugs-maven-plugin</artifactId>
                 <version>4.5.3.0</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>3.16.0</version>
+            </plugin>
         </plugins>
-
     </reporting>
 </project>
